--- a/index.html
+++ b/index.html
@@ -1,7 +1,3 @@
-
-
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
-    <link rel="stylesheet" href="style.css">
-    <script defer src="main.js"></script>
+    <link rel="stylesheet" href="styles.css">
+    <script defer src="app.js"></script>
 </head>
 
 <body>
@@ -19,17 +15,39 @@
             <h1>Weather App</h1>
             <ul class="upper-box-items">
                 <li class="upper-box-item">Pick a Location</li>
-                <input type="text" class="upper-box-item" id="city-name-input">
+                <input type="text" class="upper-box-item" id="city-name-input"/>
                 <button class="upper-box-item" id="search-button">Get Weather</button>
             </ul>
         </div>
         <div class="lower-box">
+            <div class="forecast-container">
             <ul class="weather-box" id="weather-box">Choose a location to view the weather.</ul>
-            <ul class="previous-searches-list">
+            <div class="grid-container" id="grid-container"></div>
+            </div>
+            <ul class="previous-searches-list" id="previous-searches-list">
                 <h3>Previous Searches</h3>
-                <li>No previous searches.</li>
+                <!-- <li>No previous searches.</li> -->
+                <li id="no-previous-searches">No previous searches.</li>
+
+                <!-- Add a link to reload the page -->
+                <!-- <li><a href="#" id="search-link">Search again</a></li> -->
             </ul>
         </div>
+        <aside>
+            <form id="temp-conversion-form">
+                <label for="temp-to-convert">Convert the temperature:</label>
+                <input type="number" id="temp-to-convert" name="temp-to-convert">
+                <label for="to-c">to °C</label>
+                <input type="radio" id="to-c" name="convert-temp" value="c" checked>
+                <label for="to-f">to °F</label>
+                <input type="radio" id="to-f" name="convert-temp" value="f">
+                <input type="submit" value="Convert">
+            </form>
+            <h4 id="conversion-result"></h4>
+        </aside>
+        
+
+
     </div>            
 </body>
 </html>
